fix white space pre-line

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,3 @@
-html {
-  white-space: pre-line;
-}
-
-
 /* Swiper */
 
 .swiper-button-next { 
